[FIX] adjust Pod Topology display to prevent UI cutoff

--- a/src/pages/Topology/Topology.css
+++ b/src/pages/Topology/Topology.css
@@ -4,7 +4,7 @@
   display: flex;
   flex-flow: column;
   height: calc(100vh);
-  width: 100vw;
+  width: calc(100vw);
   overflow: auto;
   position: relative;
 }
